# ngapv2

./: 3gpp_types.c  3gpp_types.h  CMakeLists.txt  Makefile  NGAP-CommonDataTypes.asn  NGAP-Constants.asn  NGAP-Containers.asn  NGAP-IEs.asn  NGAP-PDU-Contents.asn  NGAP-PDU-Descriptions.asn  amf_context.h  main.c  ngap_asn1c.h  ngap_conv.c  ngap_conv.h  ngap_test.c
asn1c/: AMF-TNLAssociationSetupItem.c  AMF-TNLAssociationSetupItem.h  AMF-TNLAssociationSetupList.c  AMF-TNLAssociationSetupList.h  AMF-TNLAssociationToAddItem.c  AMF-TNLAssociationToAddItem.h  AMF-TNLAssociationToAddList.c  AMF-TNLAssociationToAddList.h  AMF-TNLAssociationToRemoveItem.c  AMF-TNLAssociationToRemoveItem.h  AMF-TNLAssociationToRemoveList.c  AMF-TNLAssociationToRemoveList.h  AMF-TNLAssociationToUpdateItem.c  AMF-TNLAssociationToUpdateItem.h  AMF-TNLAssociationToUpdateList.c  AMF-TNLAssociationToUpdateList.h  AMF-UE-NGAP-ID.c  AMF-UE-NGAP-ID.h  AMFConfigurationUpdate.c  AMFConfigurationUpdate.h  AMFConfigurationUpdateAcknowledge.c  AMFConfigurationUpdateAcknowledge.h  AMFConfigurationUpdateFailure.c  AMFConfigurationUpdateFailure.h  AMFName.c  AMFName.h  AMFPagingTarget.c  AMFPagingTarget.h  AMFPointer.c  AMFPointer.h  AMFRegionID.c  AMFRegionID.h  AMFSetID.c  AMFSetID.h  AMFStatusIndication.c  AMFStatusIndication.h  AdditionalDLUPTNLInformationForHOItem.c  AdditionalDLUPTNLInformationForHOItem.h  AdditionalDLUPTNLInformationForHOList.c  AdditionalDLUPTNLInformationForHOList.h  (+1137 more)
tool/: core.h  core_mutex.h  core_pool.h  debug.h  mutex.c  pkbuf.c  pkbuf.h
